--- a/package.json
+++ b/package.json
@@ -18,9 +18,10 @@
     "node": ">= 0.4.12"
   },
   "dependencies": { 
-    "njrpc": "1.0.1",
+    "njrpc": "latest",
+    "node-uuid" : "latest",
     "restify": "0.5.4",
-  	"pg" : "0.6.6"
-	},
+    "pg" : "0.6.6"
+  },
   "devDependencies": {}
 }
