--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "main": "server.js",
   "scripts": {
-    "test": "node test/test.js"
+    "test": "vows test/**/*Test.js --spec"
   },
   "engines": {
     "node": ">= 0.4.12"
