add testing to authHandler and also refactored server.js

--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   },
   "main": "server.js",
   "scripts": {
-    "test": "vows test/**/*Test.js --spec"
+    "test": "vows test/**/*Test.js --spec",
+    "start": "node server.js -p"
   },
   "engines": {
     "node": ">= 0.4.12"
