--- a/.travis.yml
+++ b/.travis.yml
@@ -4,3 +4,4 @@ node_js:
   - 0.6
 before_script:
   - "psql -c 'create database metadb;' -U postgres"
+  - "psql -c 'create user metadb_rw with password \'metadb\';' -U postgres"
