--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,6 @@
 language: node_js
 node_js:
-  - 0.4
   - 0.6
 before_script:
-  - "psql -c 'create database metadb;' -U postgres"
-  - "psql -c 'create user metadb_rw with password \'metadb\';' -U postgres"
+  - psql -c 'create database metadb;' -U postgres
+  - psql -c "create user metadb_rw with password 'metadb';" -U postgres
