--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "node-uuid" : "latest",
     "restify": "0.5.4",
     "pg" : "0.6.6",
+    "underscore" : ">= 1.3.1",
     "sha1" : "latest"
   },
   "devDependencies": {
